--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@
       <h1>About Me</h1>
       <!--This is a new sub-row within Row-1-->
       <div class="row">
-        <!--This is Column-1 of new sub-row-->
+        <!--This is Column-1 of new sub-row; to contain profile picture-->
         <div class="col-2">
           <figure><img src="Assets/Profile Pic.png" class="img-fluid" alt="My Profile Image">
           </figure>
         </div>
-        <!--This is Column-2 of new sub-row-->
+        <!--This is Column-2 of new sub-row; to contain main content-->
         <div class="col-7">
           <section>
+            <h2>Introduction</h2>
             <p>
               I, Maryum Bokhari, am a student currently working on a venture to become a Full-Stack Web Developer. I am
               a
@@ -76,7 +77,9 @@
               moved to England in 2016 to continue my pursuit in becoming an engineer, from Aston University. In 2020,
               I joined a Bootcamp at University of Birmingham, to learn and become an expert at coding.<br>
 
-              <br> My basic educational achievemants include the following:
+            <h2>My Achievements</h2>
+
+            <p>My basic educational achievements include the following:</p>
 
             <ul>
               <li>8 O level subjects, passed with 2 A*'s and 6 A's, from Convent of Jesus and Mary, Lahore, Pakistan, in
@@ -84,6 +87,8 @@
               <li>3 A level subjects, passed with an A in Chemistry, and 2 B's in Mathematics and Biology, in 2016.</li>
               <li>A Chemical Enigeering Honours Degree from Aston University, in 2020.</li>
             </ul><br>
+
+            <h2>My Programming Work</h2>
 
             <p>Being a student at University of Birmingham, as mentioned earlier, I learned how to code and create web
               applications, as a part of the Full-Stack Web Development course. Some such projects that I submitted as a
@@ -144,9 +149,19 @@
             </p>
           </section>
         </div>
-        <!--This is Column-3 of new sub-row-->
+        <!--This is Column-3 of new sub-row; to contain contact information card-->
         <div class="col-3">
-
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Resources About Myself</h5>
+              <p class="card-text">I thought it would be helpful to provide some extra resources and information, for my
+                portfolio viewers to
+                learn more about my career choice(s), achievements, experiences, and other useful information. I
+                included them in this card and listed them below:</p>
+              <a href="#" class="card-link">Another link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
