updated links in contact information (card)

--- a/index.html
+++ b/index.html
@@ -158,8 +158,13 @@
                 portfolio viewers to
                 learn more about my career choice(s), achievements, experiences, and other useful information. I
                 included them in this card and listed them below:</p>
-              <a href="#" class="card-link">Another link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a href="https://drive.google.com/file/d/1XKfjrojBIY4aSc7Dhf0ZCh0_-v2kiVAI/view?usp=sharing" class="CV"
+                target="_blank"><b>My Curriculum Vitae</b></a><br><br>
+              <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" class="LinkedIn" target="_blank"><b>My
+                  LinkedIn Profile</b></a><br><br>
+              <a href="https://github.com/Maryum97" class="Github" target="_blank"><b>My Github Profile</b></a><br><br>
+              <p><b>My Phone Number: </b><br>+44 (0) 7452 894 940</p>
+              <p><b>My Email Address: </b><br>maryumbokhari97@gmail.com</p>
             </div>
           </div>
         </div>
@@ -183,8 +188,7 @@
       <div class="col-6">
         Follow me on social media:
         <br>
-        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i
-            class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.instagram.com/maryumbokhari97/" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
