updated footer styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -129,8 +129,7 @@
       <div class="col-6">
         Follow me on social media:
         <br>
-        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i
-            class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.instagram.com/maryumbokhari97/" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
