--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       <!--This is a new sub-row within Row-1-->
       <div class="row">
         <!--This is Column-1 of new sub-row; to contain profile picture-->
-        <div class="col-2">
+        <div class="col-3">
           <figure><img src="Assets/Profile Pic.png" class="img-fluid" alt="My Profile Image">
           </figure>
         </div>
         <!--This is Column-2 of new sub-row; to contain main content-->
-        <div class="col-7">
+        <div class="col-8">
           <section>
             <h2>Introduction</h2>
             <p>
@@ -100,17 +100,20 @@
                 coding-related questions to the user, under a time limit. It has been created by myself, and is designed
                 to be very simplistic and user-friendly. Take a look:
                 <br><br>
+
                 <img src="Assets/Code-Quiz.png" class="img-fluid" alt="Code Quiz">
                 <p>You may find the deployed webpage <a href="https://maryum97.github.io/04_Web-API-s_Code_Quiz/"
                     target="_blank">here</a>.</p>
                 <p>Check out the Github repository <a href="https://github.com/Maryum97/04_Web-API-s_Code_Quiz"
                     target="_blank">here</a>.</p>
               </li>
+
               <li><b>My Weather Dashboard</b> - ah, my favourite... this is the website I created for the purpose of
                 checking the current and future weather forecast of any city/country around the world, made possible
                 with the use of weather API's. It stores the name of any location searched, so thay you may have another
                 look! Here's the forecast of Birmingham shown on my Weather Dashboard:
                 <br><br>
+
                 <img src="Assets/Weather-Dashboard.png" class="img-fluid" alt="Weather Dashboard">
                 <p>You may find the deployed webpage <a
                     href="https://github.com/Maryum97/06_Server-Side-API-s_Weather-Dashboard" target="_blank">here</a>.
@@ -119,6 +122,7 @@
                     href="https://maryum97.github.io/06_Server-Side-API-s_Weather-Dashboard/" target="_blank">here</a>.
                 </p>
               </li>
+
               <li><b>"Believe." - A Group Project</b> - this is a website created by myself and three other people in my
                 group. This is yet another highly simplistic and a user-friendly platform created for the purpose of
                 tracking your health and wellbeing to improve your
@@ -126,6 +130,7 @@
                 served the purpose of importing nutritional value of the food we eat on a daily basis). The website
                 consists of three web-pages, all shown below:
                 <br><br>
+
                 <p>The "Home" page:</p>
                 <img src="Assets/Believe.-1.png" class="img-fluid" alt="Home">
                 <br><br>
@@ -141,32 +146,61 @@
                     target="_blank">here</a>.
                 </p>
               </li>
+
             </ol>
 
             It is always helpful to remain up-to-date with the advancement in science and technology. Therefore, I
             made the decision to pursue Coding from UOB, to advance my career and prospect of getting a job in the STEM
-            field.
+            field. Not only that, but this career option has widened my perspective towards other science and tech-
+            related fields, and how to step forth and develop one's own industry/platform for the benefit of oneself and
+            the wider community.
             </p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
           </section>
         </div>
-        <!--This is Column-3 of new sub-row; to contain contact information card-->
-        <div class="col-3">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Resources About Myself</h5>
-              <p class="card-text">I thought it would be helpful to provide some extra resources and information, for my
-                portfolio viewers to
-                learn more about my career choice(s), achievements, experiences, and other useful information. I
-                included them in this card and listed them below:</p>
-              <a href="https://drive.google.com/file/d/1XKfjrojBIY4aSc7Dhf0ZCh0_-v2kiVAI/view?usp=sharing" class="CV"
-                target="_blank"><b>My Curriculum Vitae</b></a><br><br>
-              <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" class="LinkedIn" target="_blank"><b>My
-                  LinkedIn Profile</b></a><br><br>
-              <a href="https://github.com/Maryum97" class="Github" target="_blank"><b>My Github Profile</b></a><br><br>
-              <p><b>My Phone Number: </b><br>+44 (0) 7452 894 940</p>
-              <p><b>My Email Address: </b><br>maryumbokhari97@gmail.com</p>
+
+
+        <!--Empty column-->
+        <div class="col-1">
+
+        </div>
+
+        <!--This new row; to contain contact information card-->
+        <div class="row">
+
+          <!--This is the column to contain the card-->
+          <div class="col-12">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Additional Resources</h5>
+                <p class="card-text">I thought it would be helpful to provide some extra resources and information, for
+                  my
+                  portfolio viewers to
+                  learn more about my career choice(s), achievements, experiences, and other useful information. I
+                  included them in this card and listed them below:</p>
+                <a href="https://drive.google.com/file/d/1XKfjrojBIY4aSc7Dhf0ZCh0_-v2kiVAI/view?usp=sharing" class="CV"
+                  target="_blank"><b>
+                    <p style="text-align: center;">My Curriculum Vitae</p>
+                  </b></a>
+                <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" class="LinkedIn" target="_blank"><b>
+                    <p style="text-align: center;">My LinkedIn Profile</p>
+                  </b></a>
+                <a href="https://github.com/Maryum97" class="Github" target="_blank"><b>
+                    <p style="text-align: center;">My Github Profile</p>
+                  </b></a>
+                <p class="phone"><b>My Phone Number: </b><br>+44 (0) 7452 894 940</p>
+                <p class="email"><b>My Email Address: </b><br>maryumbokhari97@gmail.com</p>
+              </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
@@ -188,7 +222,8 @@
       <div class="col-6">
         Follow me on social media:
         <br>
-        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i
+            class="fab fa-linkedin"></i></a>
         <a href="https://www.instagram.com/maryumbokhari97/" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
