added and edited images and page content

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,15 +61,16 @@
       <div class="row">
         <!--This is Column-1 of Row-3-->
         <div class="col-6">
-          <figure><img src="Assets/LahoreLocation.JPG" class="img-fluid" alt="Geographical Location of Lahore">
-            <figcaption>See that pink star? That's Lahore on a map.</figcaption>
+          <figure><img src="Assets/LahoreOnAMap.png" class="img-fluid" alt="Geographical Location of Lahore">
+            <figcaption>See that pink star? That's Lahore, my hometown, on a map. It's big, highly advanced and
+              extremely attractive for people to find greater opportunities, throughout Punjab, Pakistan. I was very lucky to be raised here :).</figcaption>
           </figure>
         </div>
         <!--This is Column-2 of Row-3-->
         <div class="col-6">
           <figure><img src="Assets/LahoreShahiQila.JPG" class="img-fluid" alt="Lahore Fort">
-            <figcaption>The very beautiful and famous Shahi Qila, or the Lahore Fort; a very important landmark and
-              tourist attracttion of my hometown.</figcaption>
+            <figcaption>Just thought I'd share an image of the very beautiful and famous Shahi Qila, or the Lahore Fort;
+              an important landmark and tourist attracttion of my city.</figcaption>
           </figure>
         </div>
       </div>
@@ -82,7 +83,10 @@
         <!--This is Column-2 of Row-4-->
         <div class="col-8">
           <figure><img src="Assets/CJM.JPG" class="img-fluid" alt="Convent of Jesus and Mary, Lahore">
-            <figcaption>In the loving memory of my school, Convent of Jesus and Mary, Lahore.</figcaption>
+            <figcaption>In the loving memory of my school, Convent of Jesus and Mary, Lahore, where I spent most of my
+              formative years and graduated with an O levels, under the influence of the incredible teaching staff and
+              crew.
+            </figcaption>
           </figure>
         </div>
 
@@ -100,13 +104,15 @@
         <!--This is Column-1 of Row-6-->
         <div class="col-6">
           <figure><img src="Assets/AstonUniversity.JPG" class="img-fluid" alt="Aston University, Birmingham">
-            <figcaption>Aston University, right here in Birmingham, UK.</figcaption>
+            <figcaption>Aston University, right here in Birmingham, UK, where I had the honour of studying and
+              graduating with a masters degree in Chemical Engineering.</figcaption>
           </figure>
         </div>
         <!--This is Column-2 of Row-6-->
         <div class="col-6">
           <figure><img src="Assets/UOB.JPG" class="img-fluid" alt="University of Birmingham">
-            <figcaption>Of course, the very well-known University of Birmingham.</figcaption>
+            <figcaption>Of course, the very well-known University of Birmingham, where I now have the privilege of
+              studying as an upcoming programmer.</figcaption>
           </figure>
         </div>
       </div>
@@ -129,7 +135,8 @@
       <div class="col-6">
         Follow me on social media:
         <br>
-        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i
+            class="fab fa-linkedin"></i></a>
         <a href="https://www.instagram.com/maryumbokhari97/" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
