--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 
             </ol>
 
-            It is always helpful to remain up-to-date with the advancement in science and technology. Therefore, I
+            <p>In a nutshell, it is always helpful to remain up-to-date with the advancement in science and technology. Therefore, I
             made the decision to pursue Coding from UOB, to advance my career and prospect of getting a job in the STEM
-            field. Not only that, but this career option has widened my perspective towards other science and tech-
-            related fields, and how to step forth and develop one's own industry/platform for the benefit of oneself and
-            the wider community.
+            field. Not only that, but this career option has widened my perspective towards other science and tech-related 
+            fields, and how to step forth and develop one's own industry/platform, whether online or on-ground, for the benefit of 
+            oneself and for the wider community.
             </p>
             <br>
             <br>
@@ -181,10 +181,8 @@
               <div class="card-body">
                 <h5 class="card-title">Additional Resources</h5>
                 <p class="card-text">I thought it would be helpful to provide some extra resources and information, for
-                  my
-                  portfolio viewers to
-                  learn more about my career choice(s), achievements, experiences, and other useful information. I
-                  included them in this card and listed them below:</p>
+                  my portfolio viewers to learn more about my career choice(s), achievements, experiences, and other useful 
+                  information. I listed them right in this section below:</p>
                 <a href="https://drive.google.com/file/d/1XKfjrojBIY4aSc7Dhf0ZCh0_-v2kiVAI/view?usp=sharing" class="CV"
                   target="_blank"><b>
                     <p style="text-align: center;">My Curriculum Vitae</p>
