edited page description

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,8 @@
         <div class="col-6">
           <figure><img src="Assets/LahoreOnAMap.png" class="img-fluid" alt="Geographical Location of Lahore">
             <figcaption>See that pink star? That's Lahore, my hometown, on a map. It's big, highly advanced and
-              extremely attractive for people to find greater opportunities, throughout Punjab, Pakistan. I was very lucky to be raised here :).</figcaption>
+              extremely attractive for people to find greater opportunities, throughout Punjab, Pakistan. I was very
+              lucky to be raised here :).</figcaption>
           </figure>
         </div>
         <!--This is Column-2 of Row-3-->
@@ -97,7 +98,9 @@
 
       <!--This is Row-5-->
       <br><br>
-      <h2>Here in UK...</h2>
+      <div class="row">
+        <h2>Here in UK...</h2>
+      </div>
 
       <!--This is Row-6-->
       <div class="row">
@@ -111,11 +114,86 @@
         <!--This is Column-2 of Row-6-->
         <div class="col-6">
           <figure><img src="Assets/UOB.JPG" class="img-fluid" alt="University of Birmingham">
-            <figcaption>Of course, the very well-known University of Birmingham, where I now have the privilege of
+            <figcaption>Of course, the very well-known University of Birmingham, where I am currently taking advantage
+              of the privilege of
               studying as an upcoming programmer.</figcaption>
           </figure>
         </div>
       </div>
+
+      <!-- This is Row-7 -->
+      <br><br>
+      <div class="row">
+        <h2>My Hobbies & Interests Include...</h2>
+      </div>
+
+      <!-- This is Row-8 -->
+      <div class="row">
+        <!-- This is Column-1 of Row-8 -->
+        <div class="col-7">
+          <figure><img src="Assets/Exercise.png" class="img-fluid" alt="Excercise">
+          </figure>
+        </div>
+
+        <!-- This is Column-2 of Row-8 -->
+        <div class="col-5">
+          <br>
+          <br>
+          <br>
+          <figcaption>...aerobics and Zumba dancing...</figcaption>
+        </div>
+      </div>
+      <br>
+
+      <!-- This is Row-9 -->
+      <div class="row">
+        <!-- This is Column-1 of Row-9 -->
+        <div class="col-6">
+          <br>
+          <br>
+          <br>
+          <figcaption>...cycling around the block every now and then...</figcaption>
+        </div>
+
+        <!-- This is Column-2 of Row-9 -->
+        <div class="col-6">
+          <figure><img src="Assets/Cycling.png" class="img-fluid" alt="Cycling">
+          </figure>
+        </div>
+
+      </div>
+      <br>
+
+      <!-- This is Row-10 -->
+      <div class="row">
+        <!-- This is Column-1 of Row-10 -->
+        <div class="col-7">
+          <figure><img src="Assets/SocialMedia.png" class="img-fluid" alt="Social Media">
+          </figure>
+        </div>
+
+        <!-- This is Column-2 of Row-10 -->
+        <div class="col-5">
+          <br>
+          <br>
+          <br>
+          <figcaption>...and watching videos, listening to podcasts, in addition to keeping myself updated on social
+            media.</figcaption>
+        </div>
+
+      </div>
+      <br>
+
+      <!-- This is Row-11 -->
+      <br><br>
+      <div class="row">
+        <p>Since my childhood, I have always been into health and fitness, and I had the opportunity to play martial
+          arts and achieve a black belt when I was just 14 (in 2011.) In this day and age of busy lifestyles and
+          routines, I aways try my utmost to take out the time for my
+          health, wellbeing, and entertainment, so that I can stay refreshed and open towards more learning and mental
+          nourishment, since a healthy lifestyle is what drives me to looking forward to life.</p>
+      </div>
+
     </div>
     <br>
     <br>
