--- a/contact.html
+++ b/contact.html
@@ -58,52 +58,81 @@
       <!--This is a new sub-row within Row-1-->
       <div class="row">
         <form>
-          <!--This is the label input for 'name'-->
-          <div class="mb-3">
-            <label for="exampleInputName" class="form-label">Full Name</label>
-            <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp">
+          <!--This is Column for form-->
+          <div class="col">
+            <!--This is the label input for 'name'-->
+            <div class="mb-3">
+              <label for="exampleInputName" class="form-label">Full Name</label>
+              <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp">
+            </div>
+            <!--This is the label input for 'email address'-->
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <!--This is the label imput for 'message'-->
+            <div class="mb-3">
+              <label for="exampleInputMessage" class="form-label">Message</label>
+              <input type="text" class="form-control" id="exampleInputMessage" aria-describedby="messageHelp">
+            </div>
+            <!--This is the submit-->
+            <button type="button" class="btn btn-primary">Submit</button>
           </div>
-          <!--This is the label input for 'email address'-->
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-          </div>
-          <!--This is the label imput for 'message'-->
-          <div class="mb-3">
-            <label for="exampleInputMessage" class="form-label">Message</label>
-            <input type="text" class="form-control" id="exampleInputMessage" aria-describedby="messageHelp">
-          </div>
-          <!--This is the submit-->
-          <button type="button" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
-    </div>
-  </div>
 
-  <!--This is the footer row of the page-->
-  <footer class="page-footer font-small blue">
-    <!-- Copyright and link -->
-    <div class="row">
-      <div class="col-6">
-        <div class="footer-copyright text-center py-3">
-          © 2020 Copyright
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+
+        </form>
+
+        <!--This is the column to contain the card-->
+        <div class="col-12">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">...Or Contact Me Directly</h5>
+              <p class="card-text">Here is my contact information below, in case of any feeling of inconvenience when
+                you are filling out the form above:</p>
+              <p class="phone"><b>My Phone Number: </b><br>+44 (0) 7452 894 940</p>
+              <p class="email"><b>My Email Address: </b><br>maryumbokhari97@gmail.com</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-6">
-        Follow me on social media:
-        <br>
-        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/maryumbokhari97/" target="_blank"><i class="fab fa-instagram"></i></a>
-      </div>
     </div>
-  </footer>
+
+    <br>
+    <br>
+    <br>
+    <br>
 
 
-  <!-- link for JavaScript Bundle with Popper using Bootstrap-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
+
+    <!--This is the footer row of the page-->
+    <footer class="page-footer font-small blue">
+      <!-- Copyright and link -->
+      <div class="row">
+        <div class="col-6">
+          <div class="footer-copyright text-center py-3">
+            © 2020 Copyright
+          </div>
+        </div>
+        <div class="col-6">
+          Follow me on social media:
+          <br>
+          <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i
+              class="fab fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/maryumbokhari97/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </footer>
+
+
+    <!-- link for JavaScript Bundle with Popper using Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
