edited page layout and footer content

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       <!--This is a new sub-row within Row-1-->
       <div class="row">
         <!--This is Column-1 of new sub-row; to contain profile picture-->
-        <div class="col-3">
+        <div class="col-2">
           <figure><img src="Assets/Profile Pic.png" class="img-fluid" alt="My Profile Image">
           </figure>
         </div>
         <!--This is Column-2 of new sub-row; to contain main content-->
-        <div class="col-8">
+        <div class="col-9">
           <section>
             <h2>Introduction</h2>
             <p>
@@ -164,9 +164,6 @@
             <br>
             <br>
             <br>
-            <br>
-            <br>
-            <br>
           </section>
         </div>
 
@@ -215,12 +212,21 @@
   <footer class="page-footer font-small blue">
     <!-- Copyright and link -->
     <div class="row">
-      <div class="col-6">
+      <div class="col-3">
         <div class="footer-copyright text-center py-3">
           © 2020 Copyright
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-2">
+        <a class="footer-nav-link active" aria-current="page" href="index.html">About</a>
+      </div>
+      <div class="col-2">
+        <a class="footer-nav-link" href="portfolio.html">Porfolio</a>
+      </div>
+      <div class="col-2">
+        <a class="footer-nav-link" href="contact.html">Contact</a>
+      </div>
+      <div class="col-3">
         Follow me on social media:
         <br>
         <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i
