--- a/portfolio.html
+++ b/portfolio.html
@@ -205,12 +205,21 @@
   <footer class="page-footer font-small blue">
     <!-- Copyright and link -->
     <div class="row">
-      <div class="col-6">
+      <div class="col-3">
         <div class="footer-copyright text-center py-3">
           © 2020 Copyright
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-2">
+        <a class="footer-nav-link active" aria-current="page" href="index.html">About</a>
+      </div>
+      <div class="col-2">
+        <a class="footer-nav-link" href="portfolio.html">Porfolio</a>
+      </div>
+      <div class="col-2">
+        <a class="footer-nav-link" href="contact.html">Contact</a>
+      </div>
+      <div class="col-3">
         Follow me on social media:
         <br>
         <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i
