edited html tags and image src text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row">
         <!--This is Column-1 of new sub-row; to contain profile picture-->
         <div class="col-2">
-          <figure><img src="Assets/Profile Pic.png" class="img-fluid" alt="My Profile Image">
+          <figure><img src="Assets/ProfilePic.png" class="img-fluid" alt="My Profile Image">
           </figure>
         </div>
         <!--This is Column-2 of new sub-row; to contain main content-->
@@ -186,15 +186,12 @@
                   useful
                   information. I listed them right in this section below:</p>
                 <a href="https://drive.google.com/file/d/1XKfjrojBIY4aSc7Dhf0ZCh0_-v2kiVAI/view?usp=sharing" class="CV"
-                  target="_blank"><b>
-                    <p style="text-align: center;">My Curriculum Vitae</p>
-                  </b></a>
-                <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" class="LinkedIn" target="_blank"><b>
-                    <p style="text-align: center;">My LinkedIn Profile</p>
-                  </b></a>
-                <a href="https://github.com/Maryum97" class="Github" target="_blank"><b>
-                    <p style="text-align: center;">My Github Profile</p>
-                  </b></a>
+                  target="_blank">
+                    <p style="text-align: center;"><b>My Curriculum Vitae</b></p></a>
+                <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" class="LinkedIn" target="_blank">
+                    <p style="text-align: center;"><b>My LinkedIn Profile</b></p></a>
+                <a href="https://github.com/Maryum97" class="Github" target="_blank">
+                    <p style="text-align: center;"><b>My Github Profile</b></p></a>
               </div>
             </div>
           </div>
