edited html tags and semantics

--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
           <br>
           <br>
           <br>
-          <figcaption>...aerobics and Zumba dancing...</figcaption>
+          <p>...aerobics and Zumba dancing...</p>
         </div>
       </div>
       <br>
@@ -152,7 +152,7 @@
           <br>
           <br>
           <br>
-          <figcaption>...cycling around the block every now and then...</figcaption>
+          <fp>...cycling around the block every now and then...</p>
         </div>
 
         <!-- This is Column-2 of Row-9 -->
@@ -177,8 +177,8 @@
           <br>
           <br>
           <br>
-          <figcaption>...and watching videos, listening to podcasts, in addition to keeping myself updated on social
-            media.</figcaption>
+          <p>...and watching videos, listening to podcasts, in addition to keeping myself updated on social
+            media.</p>
         </div>
 
       </div>
