edited html tags and semantics

--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
           <br>
           <br>
           <br>
-          <fp>...cycling around the block every now and then...</p>
+          <p>...cycling around the block every now and then...</p>
         </div>
 
         <!-- This is Column-2 of Row-9 -->
