added gifs for group projects

--- a/index.html
+++ b/index.html
@@ -123,28 +123,26 @@
                 </p>
               </li>
 
-              <li><b>"Believe." - A Group Project</b> - this is a website created by myself and three other people in my
+              <li><b>"Believe." - Group Project 1</b> - this website was created by myself and three other people in my
                 group. This is yet another highly simplistic and a user-friendly platform created for the purpose of
                 tracking your health and wellbeing to improve your
-                general lifestyle; it has made use of all front-end programming tools, including API's (one of which
-                served the purpose of importing nutritional value of the food we eat on a daily basis). The website
-                consists of three web-pages, all shown below:
+                general lifestyle; it has made use of all front-end programming tools, including API's. The website
+                consists of three web-pages, all shown in the animated GIF below:
                 <br><br>
 
-                <p>The "Home" page:</p>
-                <img src="Assets/Believe.-1.png" class="img-fluid" alt="Home">
+                <img src="Assets/Believe.gif" class="img-fluid" alt="Believe">
+
+              </li>
+
+              <li><b>"Code Crowd" - Group Project 2</b> - this social media application was created by myself and two other
+                group members. This web-app is all about connecting with coders and perfecting your programming skills, via 
+                posts of code snippets and screenshots. This app has been created using the MVC structure, and has made use of
+                the very latest and sophisticated back-end tools - MySQL, Express, and Bycrypt, and used models, routes and handlebars.
+                The usage for this web-app is demonstrated in the animated GIF below:
                 <br><br>
-                <p>The "My Wellbeing Goals" page:</p>
-                <img src="Assets/Believe.-2.png" class="img-fluid" alt="My Wellbeing Goals">
-                <br><br>
-                <p>The "Nutrition Tracking" page:</p>
-                <img src="Assets/Believe.-3.png" class="img-fluid" alt="Nutrition Tracking">
-                <p>Yet again, you may find the deployed webpage <a href="https://maryum97.github.io/believe/index.html"
-                    target="_blank">here</a>.
-                </p>
-                <p>Check out the Github repository too <a href="https://github.com/Maryum97/believe"
-                    target="_blank">here</a>.
-                </p>
+
+                <img src="Assets/Code-Crowd.gif" class="img-fluid" alt="Code Crowd">
+
               </li>
 
             </ol>
