removed submission form

--- a/contact.html
+++ b/contact.html
@@ -53,36 +53,6 @@
     <div id="textbox" class="p-4 border bg-light">
       <!--This is Row-1 in the gutter; the page heading-->
       <h1>Contact Me</h1>
-      <!--This is a new sub-row within Row-1-->
-      <div class="row">
-        <form>
-          <!--This is Column for form-->
-          <div class="col">
-            <!--This is the label input for 'name'-->
-            <div class="mb-3">
-              <label for="exampleInputName" class="form-label">Full Name</label>
-              <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp">
-            </div>
-            <!--This is the label input for 'email address'-->
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <!--This is the label imput for 'message'-->
-            <div class="mb-3">
-              <label for="exampleInputMessage" class="form-label">Message</label>
-              <input type="text" class="form-control" id="exampleInputMessage" aria-describedby="messageHelp">
-            </div>
-            <!--This is the submit-->
-            <button type="button" class="btn btn-primary">Submit</button>
-          </div>
-
-          <br>
-          <br>
-          <br>
-          <br>
-
-        </form>
 
         <h2></h2>
         <h3></h3>
@@ -91,7 +61,7 @@
         <div class="col-12">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">...Or Contact Me Directly</h5>
+              <h5 class="card-title">Get In Touch With Me Directly</h5>
               <p class="card-text">Here is my contact information below, in case of any feeling of inconvenience when
                 you are filling out the form above:</p>
               <p class="phone"><b>My Phone Number: </b><br>+44 (0) 7452 894 940</p>
