added links to repos and deployed apps

--- a/index.html
+++ b/index.html
@@ -131,17 +131,37 @@
                 <br><br>
 
                 <img src="Assets/Believe.gif" class="img-fluid" alt="Believe">
+                <p>You may find the deployed webpage <a href="https://maryum97.github.io/believe/"
+                    target="_blank">here</a>.
+                </p>
+                <p>Check out the Github repository <a href="https://github.com/Maryum97/believe"
+                    target="_blank">here</a>.
+                </p>
+
+                <br><br>
 
               </li>
 
-              <li><b>"Code Crowd" - Group Project 2</b> - this social media application was created by myself and two other
-                group members. This web-app is all about connecting with coders and perfecting your programming skills, via 
-                posts of code snippets and screenshots. This app has been created using the MVC structure, and has made use of
-                the very latest and sophisticated back-end tools - MySQL, Express, and Bycrypt, and used models, routes and handlebars.
+              <li><b>"Code Crowd" - Group Project 2</b> - this social media application was created by myself and two
+                other
+                group members. This web-app is all about connecting with coders and perfecting your programming skills,
+                via
+                posts of code snippets and screenshots. This app has been created using the MVC structure, and has made
+                use of
+                the very latest and sophisticated back-end tools - MySQL, Express, and Bycrypt, and used models, routes
+                and handlebars.
                 The usage for this web-app is demonstrated in the animated GIF below:
                 <br><br>
 
                 <img src="Assets/Code-Crowd.gif" class="img-fluid" alt="Code Crowd">
+                <p>You may find the deployed Heroku app <a href="https://code-crowd.herokuapp.com/"
+                    target="_blank">here</a>.
+                </p>
+                <p>Check out the Github repository <a href="https://github.com/Maryum97/Code_Crowd"
+                    target="_blank">here</a>.
+                </p>
+
+                <br><br>
 
               </li>
 
@@ -185,11 +205,14 @@
                   information. I listed them right in this section below:</p>
                 <a href="https://drive.google.com/file/d/1XKfjrojBIY4aSc7Dhf0ZCh0_-v2kiVAI/view?usp=sharing" class="CV"
                   target="_blank">
-                    <p style="text-align: center;"><b>My Curriculum Vitae</b></p></a>
+                  <p style="text-align: center;"><b>My Curriculum Vitae</b></p>
+                </a>
                 <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" class="LinkedIn" target="_blank">
-                    <p style="text-align: center;"><b>My LinkedIn Profile</b></p></a>
+                  <p style="text-align: center;"><b>My LinkedIn Profile</b></p>
+                </a>
                 <a href="https://github.com/Maryum97" class="Github" target="_blank">
-                    <p style="text-align: center;"><b>My Github Profile</b></p></a>
+                  <p style="text-align: center;"><b>My Github Profile</b></p>
+                </a>
               </div>
             </div>
           </div>
@@ -209,7 +232,7 @@
     <div class="row">
       <div class="col-3">
         <div class="footer-copyright text-center py-3">
-          © 2020 Copyright
+          © 2021 Copyright
         </div>
       </div>
       <div class="col-2">
