final corrections in text

--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,7 @@
         <div class="col-12">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Get In Touch With Me Directly</h5>
-              <p class="card-text">Here is my contact information below, in case of any feeling of inconvenience when
-                you are filling out the form above:</p>
+              <h5 class="card-title">Get In Touch With Me Directly, Using The Information Below:</h5>
               <p class="phone"><b>My Phone Number: </b><br>+44 (0) 7452 894 940</p>
               <p class="email"><b>My Email Address: </b><br>maryumbokhari97@gmail.com</p>
             </div>
