--- a/portfolio.html
+++ b/portfolio.html
@@ -188,7 +188,7 @@
       <br><br>
       <div class="row">
         <p>Since my childhood, I have always been into health and fitness, and I had the opportunity to play martial
-          arts and achieve a black belt when I was just 14 (in 2011.) In this day and age of busy lifestyles and
+          arts and achieve a black belt when I was just 14 (in 2011). In this day and age of busy lifestyles and
           routines, I aways try my utmost to take out the time for my
           health, wellbeing, and entertainment, so that I can stay refreshed and open towards more learning and mental
           nourishment, since a healthy lifestyle is what drives me to looking forward to life.</p>
